12/06/12 Added channelmode +R to scarynet
12/04/20 Added country lookup for servers to support #46@magirc
11/04/22 r432 Added parameter support for !stats and !gstats
11/02/12 r423 Added support for accounts on Charybdis at burst
11/02/12 r421 Added support for accounts on Charybdis
11/02/11 r416 Added support for ircd-rizon

Changes
12/07/23 Updated sql specific code, more preparations for threadin
12/07/18 Fixed persistent channel support by actually setting the modes in the protocols.
12/07/18 Applied denora_automode to several protocols
12/07/18 Moved automode handler into a separate void and marked some todo's regarding it for later
12/07/18 Added automode handler for logchannel into inspircd11
12/07/17 p10 wants 391 replies (RPL_TIME) in another way. 'Fixed', just need to calc offset somehow.
12/07/17 Don't call events if (umode = o && ((add && was_oper) || (!add && !was_oper)) (should fix #1264)
12/07/17 Updated README
12/07/15 used #ifdef USE_MYSQL in modules seen/lastspoke/ircd_ports (should fix #1429)
12/07/15 File permission detection in mysql_backup.c (should fix #1127)
12/07/15 Added automode for logchan in bahamut
12/07/15 Adding automode for logchan in inspircd12.c (should fix #1418)
12/07/15 Don't init something to NULL after free if you gonna sstrdup something over it anyways.
12/07/15 More free/sstrdup usage / Cleaned up seen.c and made it ^M free
12/07/14 Revoked change to DenoraFree() and removed that macro entirely
12/07/09 Updated ScaryNet Protocol
12/07/06 Changed delete_user to properly and warning free cleanup the channels
12/07/05 Changed a lot of free()'s into DenoraFree() in order to prevent double free()'s
12/06/29 Undone a few changes as I might see issues
12/06/27 Commented out a little more at src/db.c
12/06/27 Bumped to 1.5.0-git-501
12/06/26 Use inet_ntop for decode_ip function
12/06/26 Reduced mysql_backup.c by 27%
12/04/25 Channel names no longer forced to lowercase (#1403)
12/04/24 Updated GeoIP databases